# Helab_Microscope

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  Common.h  HelabSDK.props  Helab_Microscope.vcxproj  Helab_Microscope.vcxproj.filters  Hub.cpp  Hub.h  Makefile.am  README.md  setup_env.bat
Device/include/: BufferAPI.h  CommonAPI.h  DataStream.h  ImageBufferManager.h  ImageBufferManagerAPI.h  ImgReconstruction.cuh  ImgReconstruction.h  NIDAQ.h  Platform.h  QT12136DC.h  QT12136DC_datatype.h  QTSetFunction.h  _920TwophotonCamera.h  clock.h  galvo.h
Device/include/app/: MicroscopeController.h
Device/include/common/: Logger.h  Result.h  ThreadSafeQueue.h
Device/include/config/QT12131/: Range.json
Device/include/config/QT12135/: FunctionalConfiguration00.json
Device/include/hal/: HardwareFactory.h  IHardware.h
Device/include/hal/impl/: GalvoScanner.h  GenericLaser.h  NidaqClock.h  QtDetector.h
Device/include/mmadapter/: HelabDevices.h
Device/include/pipeline/: ImagePipeline.h
Device/source/: 920CameraPropertyAct.cpp  CameraThread.cpp  ClockTask.cpp  DataStream.cpp  ImageBufferManager.cpp  ImgReconstruction.cu  NIAnalogInputPort.cpp  NIAnalogOutputPort.cpp  NIDAQ.cpp  NIDigitalOutputPort.cpp  QT12136DC.cpp  QT12136DCPropertyAct.cpp  QT12136DCThread.cpp  QTSetFunction.cpp  _920TwophotonCamera.cpp  clock.cpp  galvo.cpp
Device/source/app/: MicroscopeController.cpp
Device/source/config/: Interface.json
Device/source/config/QT1149/: FunctionalConfiguration.json
Device/source/config/QT12131/: FunctionalConfiguration.json  FunctionalConfiguration00.json
Device/source/config/QT12135/: FunctionalConfiguration.json
Device/source/config/QT2144/: Range.json
Device/source/config/QT2149/: FunctionalConfiguration.json
Device/source/hal/impl/: GalvoScanner.cpp  GenericLaser.cpp  NidaqClock.cpp  QtDetector.cpp
Device/source/mmadapter/: HelabDevices.cpp
Device/source/pipeline/: ImagePipeline.cpp
Device/tests/app/: MicroscopeControllerTest.cpp
Device/tests/mocks/: MockHardware.h
docs/: Doxyfile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: api_reference.rst
docs/source/architecture/: app_layer.rst  hal.rst  mm_adapter.rst  overview.rst  pipeline.rst
docs/source/development/: building.rst  contributing.rst  extending.rst  testing.rst
docs/source/getting_started/: hardware_setup.rst  installation.rst  introduction.rst  quickstart.rst
docs/source/reference/: changelog.rst  glossary.rst  license.rst
docs/source/user_guide/: configuration.rst  imaging.rst  laser_control.rst  roi_scanning.rst
